// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test variableText helper convertVariableText 1`] = `
<body>
  

  <g
    class="layer"
    id="svg_1"
  >
    

    <text
      id="svg_2"
    >
      <tspan>
        ddd
      </tspan>
    </text>
    

    <text
      data-vt-offset="1234"
      data-vt-type="1"
      id="svg_3"
    >
      <tspan>
        234
      </tspan>
    </text>
    

    <text
      data-vt-offset="30"
      data-vt-type="1"
      id="svg_4"
    >
      <tspan>
        30
      </tspan>
    </text>
    

    <text
      data-vt-offset="30"
      data-vt-type="1"
      id="svg_5"
    >
      <tspan>
        030
      </tspan>
    </text>
    

    <text
      data-vt-offset="30"
      data-vt-type="1"
      id="svg_6"
    >
      <tspan>
        01e
      </tspan>
    </text>
    

    <text
      data-vt-offset="30"
      data-vt-type="1"
      id="svg_7"
    >
      <tspan>
        01E
      </tspan>
    </text>
    

    <text
      data-vt-offset="30"
      data-vt-type="1"
      id="svg_8"
    >
      <tspan>
        Not
      </tspan>
      <tspan>
        Number
      </tspan>
    </text>
    

    <text
      data-vt-type="2"
      id="svg_9"
    >
      <tspan>
        YYYYescape 2025-02-03
      </tspan>
      <tspan>
        12:34:56.123+08:00Z
      </tspan>
      <tspan>
        星期一 二月
      </tspan>
    </text>
    

    <text
      data-vt-offset="0"
      data-vt-type="3"
      id="svg_10"
    >
      <tspan>
        Name: Name 1
      </tspan>
      <tspan>
        Type: Type 1
      </tspan>
      <tspan>
        Key: Key 1
      </tspan>
    </text>
    

    <text
      data-vt-offset="1"
      data-vt-type="3"
      id="svg_11"
    >
      <tspan>
        Name: Name 2
      </tspan>
      <tspan>
        Type: 
      </tspan>
      <tspan>
        Key: Key 2
      </tspan>
    </text>
    

    <text
      data-vt-offset="2"
      data-vt-type="3"
      id="svg_12"
    >
      <tspan>
        Name: 
      </tspan>
      <tspan>
        Type: 
      </tspan>
      <tspan>
        Key: 
      </tspan>
    </text>
    

  </g>
  

</body>
`;

exports[`test variableText helper extractVariableText 1`] = `
"<g id="svgcontent">
<g id="svg_1" class="layer">

<text id="svg_3" data-vt-type="1"><tspan></tspan></text>
<text id="svg_4" data-vt-type="1"><tspan></tspan></text>
</g>


</g>"
`;

exports[`test variableText helper extractVariableText 2`] = `
"<g id="svgcontent">
<g id="svg_1" class="layer">
<text id="svg_2"><tspan></tspan></text>
<text id="svg_3" data-vt-type="1"><tspan></tspan></text>
<text id="svg_4" data-vt-type="1"><tspan></tspan></text>
</g>
<g id="svg_5" class="layer">
<text id="svg_6"><tspan></tspan></text>
</g>
<g id="svg_7" class="layer" display="none">
<text id="svg_8" data-vt-type="1"></text>
</g>
</g>"
`;

exports[`test variableText helper removeVariableText 1`] = `
<body>
  

  <g
    class="layer"
    id="svg_1"
  >
    

    <text
      id="svg_2"
    />
    

    

    

  </g>
  

  <g
    class="layer"
    id="svg_5"
  >
    

    <text
      id="svg_6"
    />
    

    

  </g>
  

  <g
    class="layer"
    display="none"
    id="svg_8"
  >
    

    

  </g>
  

</body>
`;

exports[`test variableText helper removeVariableText 2`] = `
<body>
  

  <g
    class="layer"
    id="svg_1"
  >
    

    <text
      id="svg_2"
    />
    

    <text
      data-vt-type="1"
      id="svg_3"
    />
    

    <text
      data-vt-type="1"
      id="svg_4"
    />
    

  </g>
  

  <g
    class="layer"
    id="svg_5"
  >
    

    <text
      id="svg_6"
    />
    

    <text
      data-vt-type="1"
      id="svg_7"
    />
    

  </g>
  

  <g
    class="layer"
    display="none"
    id="svg_8"
  >
    

    <text
      data-vt-type="1"
      id="svg_9"
    />
    

  </g>
  

</body>
`;
